# flappy

./: .gitignore  deploy.sh
common/src/: lib.rs
controller/: Cargo.toml  controller.ino  flaps.cpp  flaps.h
controller.old/: controller.ino  flaps.cpp
controller/src/: lib.rs  split_flap.rs  split_flap_display.rs  terminate.rs
driver/: .gitignore  driver-bottom.pos  driver-top-pos.csv  driver-top.pos  driver.csv  driver.kicad_pcb  driver.kicad_prl  driver.kicad_pro  driver.kicad_sch  fp-lib-table  sym-lib-table
driver/driver-odb/fonts/: standard
driver/driver-odb/matrix/: matrix
driver/driver-odb/misc/: info
driver/gerbers/: driver-B_Cu.gbl  driver-B_Cu.gbr  driver-B_Mask.gbr  driver-B_Mask.gbs  driver-B_Paste.gbp  driver-B_Paste.gbr  driver-B_Silkscreen.gbo  driver-B_Silkscreen.gbr  driver-Edge_Cuts.gbr  driver-Edge_Cuts.gm1  driver-F_Cu.gbr  driver-F_Cu.gtl  driver-F_Mask.gbr  driver-F_Mask.gts  driver-F_Paste.gbr  driver-F_Paste.gtp  driver-F_Silkscreen.gbr  driver-F_Silkscreen.gto  driver-NPTH.drl  driver-PTH.drl  driver-job.gbrjob
driver2/: driver2-bottom.pos  driver2-top.pos  driver2.kicad_pcb  driver2.kicad_prl  driver2.kicad_pro  driver2.kicad_sch  fp-lib-table  sym-lib-table
driver2/jlcpcb/: project.db
driver2/ul_CD74HC194PW/: PW0016A.stl
driver2/ul_DRV8806PWP/: PWP0016A.stp
models/: .gitignore  Cargo.toml  flaps.3mf
models/simplified/: housing.3mf  outer.3mf
models/src/: encode_sdf.rs  flap_model.rs  flaps.rs  housing.rs  inner.rs  lib.rs  outer.rs  settings.rs
prints/: all flaps.3mf  replacement flaps.3mf
(+47 files in other folders)
